--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "engines":{
+  "engines": {
     "node": "22.17.0"
   },
-
   "name": "404notyourhome",
   "version": "1.0.0",
   "description": "",
@@ -28,6 +27,7 @@
     "mongoose": "^8.14.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
