--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app"
   },
   "dependencies": {
     "cloudinary": "^1.41.3",
@@ -30,7 +30,6 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
-    "serverless-http": "^4.0.0"
+    "passport-local-mongoose": "^8.0.0"
   }
 }
